# quickdcp

./: CMakeLists.txt  DoxyFile.cmake  INSTALL  PostInstall.cmake  README  README.md  THIRD_PARTY  distclean.sh  quickdcp  quickdcp-funks.sh
modules/: CMakeColors.cmake  CompileOptions.cmake  FindDoxygen.cmake  FindFFMPEG.cmake  FindImageMagick.cmake  FindMagickCore.cmake  FindMagickWand.cmake  FindOpenJPEG2.cmake  FindQdcpASDCP.cmake  FindQdcpFFMPEG.cmake  FindQdcpImageMagick.cmake  FindQdcpOpenJPEG2.cmake  FindXMLSec.cmake
os/apple/: osx.cmake
os/debian/: PostInstall.cmake.cmake  linux.cmake  quickdcp.desktop  quickdcp.desktop.cmake  quickdcp.xml
os/win32/: win32.cmake
src/: asdcp_intf.cpp  dictionary.c  dictionary.h  iniparser.c  iniparser.h  mainpage.dox  qdcp_checksum.c  qdcp_cli.c  qdcp_cli.h  qdcp_config.c  qdcp_config.h  qdcp_gui.c  qdcp_gui.h  qdcp_mxf.c  qdcp_mxf.h  qdcp_photograms.c  qdcp_photograms.h  qdcp_projects.c  qdcp_projects.h  qdcp_resources.c  qdcp_sub.c  qdcp_sub.h  qdcp_video.c  qdcp_video.h  qdcp_wav.c  qdcp_wav.h  qdcp_xml.c  qdcp_xml_sign.c  qdcp_xml_verify.c  quickdcp.h  quickdcp.h.cmake
src/doc/: DoxyFile
src/doc/man/en/: quickdcp-cli.1  quickdcp.1
src/doc/man/fr/: quickdcp-cli.1  quickdcp.1
src/gui/: generate_icons.sh
src/gui/gtk/: qdcp-main.glade  qdcp-progress.glade  qdcp-renamer.glade  quickdcp-settings.gschema.xml  quickdcp.gresource.xml  quickdcp_menu.ui
src/gui/patterns/: center.xcf  empty-dark.xcf
src/i18n/: fr.po  messages.pot
